Library (tessellation): single tile with small remainder works
Until now, when the tile-size is very similar to the size of the dataset
along the given dimension, the tessellation library's produced tiles don't
fully cover the dataset. This affects NoiseChisel, Segment and Statistics.

With this commit, when setting the `last' tile-size in
`gal_tile_block_blank_flag', we first check if there is only one tile or
not. If there is indeed only one, the `last' will have the same size as the
`first'.

This fixes bug #56001.

--- a/NEWS
+++ b/NEWS
@@ -171,6 +171,7 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
   bug #55844: WCS library (and thus all programs) can't deal with CROTAi values.
   bug #55845: Crash when necessary column not found from standard input.
   bug #55988: MakeProfiles segfault when input catalog has no rows.
+  bug #56001: Bad tile sizes with only one tile and small remainder.
 
 
 
