README files: added copyright information
Copyright information was added to these files to be more clear.

--- a/README
+++ b/README
@@ -1,3 +1,6 @@
+Copyright (C) 2015-2019 Free Software Foundation, Inc.
+See the end of the file for license conditions.
+
 GNU Astronomy Utilities
 =======================
 
@@ -229,3 +232,23 @@ along with their status can be seen here
 Have a look in the link above to see if your problem has already been
 addressed. Click on "Display Criteria" and choose the "Category" of your
 bug for a shorter and more relevant list to look into.
+
+
+
+
+
+Copyright information
+---------------------
+
+Gnuastro is free software: you can redistribute it and/or modify it under
+the terms of the GNU General Public License as published by the Free
+Software Foundation, either version 3 of the License, or (at your option)
+any later version.
+
+Gnuastro is distributed in the hope that it will be useful, but WITHOUT ANY
+WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
+FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more
+details.
+
+You should have received a copy of the GNU General Public License along
+with Gnuastro. If not, see <http://www.gnu.org/licenses/>.
