--- a/bootstrapped/README
+++ b/bootstrapped/README
@@ -1,3 +1,6 @@
+Copyright (C) 2015-2019 Free Software Foundation, Inc.
+See the end of the file for license conditions.
+
 Imported files to GNU Astronomy Utilities
 =========================================
 
@@ -37,3 +40,23 @@ The projects that were used are:
 We are most grateful to the maintainers of these projects which allow
 Gnuastro to be easily installed on a very large set of Unix-like
 operating systems.
+
+
+
+
+
+Copyright information
+---------------------
+
+Gnuastro is free software: you can redistribute it and/or modify it under
+the terms of the GNU General Public License as published by the Free
+Software Foundation, either version 3 of the License, or (at your option)
+any later version.
+
+Gnuastro is distributed in the hope that it will be useful, but WITHOUT ANY
+WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
+FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more
+details.
+
+You should have received a copy of the GNU General Public License along
+with Gnuastro. If not, see <http://www.gnu.org/licenses/>.
