Fits: Check for --datetosec, in case keyword couldn't be read
We recently added the `--datetosec' option to convert the date to the Unix
epoch time (in seconds). However, there was no check to see if the keyword
value could be read or not: causing confusing errors when the given keyword
didn't exist.

With this commit, a check has been added and Fits will crash when CFITSIO
couldn't parse the given keyword's value.

--- a/NEWS
+++ b/NEWS
@@ -36,10 +36,11 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
 
   Fits:
    - Add "title" to group FITS keywords with `--write=/,"title name". This
-     "title" is composed of two keyword records: a blank one, followed by
-     another starting with `/' and ending in any string given to this
-     option. Classifying the keywords into contextually similar groups
-     greatly helps in visual inspection and is encouraged.
+     "title" is composed of two keyword records/lines: a blank one (all
+     whitespace), followed by another starting with `/' and ending in any
+     string given to this option. This visually separates the keywords and
+     acts as a title. Classifying the keywords into contextually similar
+     groups greatly helps in visual inspection and is encouraged.
    - Calculate and write `CHECKSUM' and `DATASUM' integrity keywords into
      the specified header using `--write=checksum' (for both) or
      `--write=datasum' (only for `DATASUM').
