NoiseChisel and Segment: minor clarifications
In Segment, the default description for the `--hdu' option (same for all
programs) was ambiguous, so it has been corrected to be more clear.

In the book ("NoiseChisel outputs" section), the connectivity in the
`astarithmetic' command was missed. It has been corrected.

These issues were reported by Lee Kelvin.

--- a/THANKS
+++ b/THANKS
@@ -40,7 +40,7 @@ support in Gnuastro. The list is ordered alphabetically (by family name).
     Brandon Invergo                      brandon@gnu.org
     Oryna Ivashtenko                     arinaivashtenko@gmail.com
     Aurélien Jarno                       aurelien.jarno@univ-lyon1.fr
-    Lee Kelvin                           l.s.kelvin@ljmu.ac.uk
+    Lee Kelvin                           lee.s.kelvin@gmail.com
     Brandon Kelly                        b.k.kelly@2017.ljmu.ac.uk
     Mohammad-Reza Khellat                moha.khe@gmail.com
     Johan Knapen                         jhk@iac.es
