--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,7 @@
 GNU Astronomy Utilities NEWS                          -*- outline -*-
 
+Copyright (C) 2015-2019 Free Software Foundation, Inc.
+See the end of the file for license conditions.
 
 * Noteworthy changes in release X.X (library X.X.X) (YYYY-MM-DD) [stable]
 
@@ -1542,3 +1544,15 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
   All the build steps now report what was done and suggest the next
   step. This feature can be disabled with the `--disable-guide-message' at
   configure time.
+
+
+
+
+
+* Copyright notice
+Copyright (C) 2015-2019 Free Software Foundation, Inc.
+
+Permission is granted to copy, distribute and/or modify this document under
+the terms of the GNU Free Documentation License, Version 1.3 or any later
+version published by the Free Software Foundation; with no Invariant
+Sections, with no Front-Cover Texts, and with no Back-Cover Texts.
