--- a/README
+++ b/README
@@ -1,8 +1,8 @@
-Copyright (C) 2015-2019 Free Software Foundation, Inc.
-See the end of the file for license conditions.
-
 GNU Astronomy Utilities
 =======================
+
+Copyright (C) 2015-2019 Free Software Foundation, Inc.
+See the end of the file for license conditions.
 
 GNU Astronomy Utilities (Gnuastro) is an official GNU package of programs
 and a library functions for astronomical data manipulation and
@@ -240,15 +240,9 @@ bug for a shorter and more relevant list to look into.
 Copyright information
 ---------------------
 
-Gnuastro is free software: you can redistribute it and/or modify it under
-the terms of the GNU General Public License as published by the Free
-Software Foundation, either version 3 of the License, or (at your option)
-any later version.
+Copyright (C) 2015-2019 Free Software Foundation, Inc.
 
-Gnuastro is distributed in the hope that it will be useful, but WITHOUT ANY
-WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
-FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more
-details.
-
-You should have received a copy of the GNU General Public License along
-with Gnuastro. If not, see <http://www.gnu.org/licenses/>.
+Permission is granted to copy, distribute and/or modify this document under
+the terms of the GNU Free Documentation License, Version 1.3 or any later
+version published by the Free Software Foundation; with no Invariant
+Sections, with no Front-Cover Texts, and with no Back-Cover Texts.
