Library (fits): won't crash when WCS can't be written
Until now, when WCSLIB's `wcshdo' function failed, the program would
crash. With this commit, it will just print a warning that the WCS couldn't
be written.

This issue was found based on a dataset provided by Javier Román.

--- a/NEWS
+++ b/NEWS
@@ -196,6 +196,7 @@ See the end of the file for license conditions.
   bug #55845: Crash when necessary column not found from standard input.
   bug #55988: MakeProfiles segfault when input catalog has no rows.
   bug #56001: Bad tile sizes with only one tile and small remainder.
+  bug #56048: Crash when WCS cannot be written to FITS file.
 
 
 
