--- a/lib/gnuastro-internal/README
+++ b/lib/gnuastro-internal/README
@@ -1,9 +1,25 @@
 GNU Astronomy Utilities internal header files
 ---------------------------------------------
 
+Copyright (C) 2015-2019 Free Software Foundation, Inc.
+See the end of the file for license conditions.
+
 The `.h' files in this directory are headers to Gnuastro's internal
 libraries: libraries that are only available to Gnuastro's programs. These
 are functions that are mainly to do with running a program, for example the
 common options to all the programs, functions to manage options and
 configuration files, timing and etc (the names are hopefully descriptive
 enough).
+
+
+
+
+
+Copyright
+---------
+Copyright (C) 2015-2019 Free Software Foundation, Inc.
+
+Permission is granted to copy, distribute and/or modify this document under
+the terms of the GNU Free Documentation License, Version 1.3 or any later
+version published by the Free Software Foundation; with no Invariant
+Sections, with no Front-Cover Texts, and with no Back-Cover Texts.
