--- a/ChangeLog
+++ b/ChangeLog
@@ -1113,3 +1113,24 @@
 
 	GNU Astronomical Utilities created with the ImageCrop as the first
 	package. Other packages will be added in the next few days.
+
+;; Local Variables:
+;; coding: utf-8
+;; End:
+
+ Copyright (C) 2015-2019, Free Software Foundation, Inc.
+
+ This file is part of GNU Astronomy Utitlies (Gnuastro).
+
+ Gnuastro is free software: you can redistribute it and/or modify it
+ under the terms of the GNU General Public License as published by
+ the Free Software Foundation, either version 3 of the License, or
+ (at your option) any later version.
+
+ Gnuastro is distributed in the hope that it will be useful, but
+ WITHOUT ANY WARRANTY; without even the implied warranty of
+ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+ General Public License for more details.
+
+ You should have received a copy of the GNU General Public License
+ along with Gnuastro. If not, see <http://www.gnu.org/licenses/>.
