--- a/doc/formath.texi
+++ b/doc/formath.texi
@@ -12,6 +12,8 @@ For the other formats, everything is normal, except the display math
 equations that don't have any proper solution, so I have just put a $$
 $$ around the math.
 
+Copyright (C) 2015-2019 Free Software Foundation, Inc.
+
 Copying and distribution of this file, with or without modification,
 are permitted in any medium without royalty provided the copyright
 notice and this notice are preserved.  This file is offered as-is,
